--- a/about.html
+++ b/about.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="assets/css/sample.css">
-  <body>
-    <div class="frame">
-      <div class="sexy">
-            <div  class="home">
-             <a href="index.html">Home </a>
-            </div>
-            <div  class="about">
-             <link rel="stylesheet" href="assets/css/about.css">
-             <a href="about.html">About</a>             
-             <image class="resume" src="assets/icon and images/imgresume.jpg">
-            </div>
-            <div  class="contact">
-             <a href="contact.html">Contact</a>              
-            </div>
-      </div>
-   </div>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About</title>
+        <link rel="stylesheet" href="assets/css/about.css">
+        <link rel="stylesheet" href="assets/css/sample.css">
+    </head>
+
+    <body>
+        <header>
+			<!-- Main container div with class "frame" -->
+			<h1 class="header_title">Portfolio</h1>
+			<div class="navigation">
+				<!-- Navigation links -->
+				<a class="home" href="index.html">Home</a> <!-- Home link -->
+				<a class="about" href="about.html">About</a> <!-- About link -->
+				<a class="contact" href="contact.html">Contact</a> <!-- Contact link -->
+			</div>
+		</header>
+        <img src="assets/icon and images/imgresume.jpg" alt="">
+    </body>
 </html>
-  
