--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="assets/css/sample.css">
-    <link rel="stylesheet" href="assets/css/contact.css">
-  </head>
-  <body>
-    <div class="frame"> 
-      <div class="sexy">            
-        <div  class="home">
-           <a href="index.html">Home</a>
-        </div>
-        <div  class="about">
-           <a href="about.html">About</a>
-        </div>
-        <div  class="contact">                          
-           <a href="contact.html">Contact</a> 
-        </div> 
-      </div>
-      <div class="wrapper">
-      <form class="form">
-        <div class="pageTitle title">SIGN UP </div>
-        <div class="secondaryTitle title">Please fill this form to sign up.</div>
-        <input type="text" class="name formEntry" placeholder="Name" />
-        <input type="text" class="email formEntry" placeholder="Email"/>
-        <textarea class="message formEntry" placeholder="Message"></textarea>     
-        <button class="submit formEntry" onclick="thanks()">Submit</button>
-      </form>
-     </div> 
-    </div>
-  </body> 
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact</title>
+        <link rel="stylesheet" href="assets/css/contact.css">
+        <link rel="stylesheet" href="assets/css/sample.css">
+    </head>
+
+    <body>
+        <header>
+			<!-- Main container div with class "frame" -->
+			<h1 class="header_title">Portfolio</h1>
+			<div class="navigation">
+				<!-- Navigation links -->
+				<a class="home" href="index.html">Home</a> <!-- Home link -->
+				<a class="about" href="about.html">About</a> <!-- About link -->
+				<a class="contact" href="contact.html">Contact</a> <!-- Contact link -->
+			</div>
+		</header>
+
+        <form class="form">
+            <div class="pageTitle title">SIGN UP </div>
+            <div class="secondaryTitle title">Please fill this form to sign up.</div>
+            <input type="text" class="name formEntry" placeholder="Name" />
+            <input type="text" class="email formEntry" placeholder="Email"/>
+            <textarea class="message formEntry" placeholder="Message"></textarea>     
+            <button class="submit formEntry" onclick="thanks()">Submit</button>
+        </form>    
+    </body>
 </html>
-
-
-
