--- a/about.html
+++ b/about.html
@@ -8,6 +8,15 @@
         <link rel="stylesheet" href="assets/css/sample.css">
     </head>
 
+    <style>
+        @media (max-width: 800px) {
+            .resume {
+                height: 25rem;
+                width: 25rem;
+            }
+        }
+    </style>
+
     <body>
         <header>
 			<!-- Main container div with class "frame" -->
@@ -19,6 +28,6 @@
 				<a class="contact" href="contact.html">Contact</a> <!-- Contact link -->
 			</div>
 		</header>
-        <img src="assets/icon and images/imgresume.jpg" alt="">
+        <img class="resume" src="assets/icon and images/imgresume.jpg" alt="">
     </body>
 </html>
